update sponsors page and footer

--- a/_includes/hub_footer.html
+++ b/_includes/hub_footer.html
@@ -1,7 +1,7 @@
 {% if page.section != 'sponsors' %}
 <div id="footer-sponsors">
     <div class="page-container">
-        <h3>Partnership sponsors</h3>
+        <h3>Developed in partnership with</h3>
         <div class="sponsor-list">
             <a href="https://newsinitiative.withgoogle.com/"><img src="/media/img/partners/google_news_initiative.png" alt="Google News Initiative"></a>
         </div>
