add schedule and attendee links to top nav

--- a/_includes/hub_footer.html
+++ b/_includes/hub_footer.html
@@ -23,6 +23,9 @@
             <h3>About this event</h3>
             <ul>
                 <li><a href="/conduct">Code of conduct</a></li>
+                <li><a href="/attendees">Attendee guide</a></li>
+                <li><a href="/facilitators">Facilitator guide</a></li>
+                <li><a href="/logistics">Logistics</a></li>
                 <li><a href="/scholarships">Scholarships</a></li>
                 <li><a href="/sponsors">Sponsors</a></li>
                 <li><a href="/volunteer">Volunteers</a></li>
