--- a/_includes/hub_footer.html
+++ b/_includes/hub_footer.html
@@ -15,6 +15,12 @@
             <a href="https://newscatalyst.org/"><img src="/media/img/partners/newscatalyst.png" alt="News Catalyst"></a>
         </div>
     </div>
+    <div class="page-container">
+        <h3>Supporting sponsor</h3>
+        <div class="sponsor-list">
+            <a href="https://knightfoundation.org/"><img src="/media/img/partners/knight_foundation.png" alt="Knight Foundation"></a>
+        </div>
+    </div>
 </div>{% endif %}
 
 <div id="footer-details">
